Unidad 3 terminada | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
@@ -44,7 +44,7 @@ Podemos tomar a cada línea de la tabla de verdad como la representación de una
 
 ### Conectivos, Tautologías y Contradicciones
 
-Los conectivos proporcionales son funciones lógicas que tomas argumentos del conjunto $\{V, F\}$ y devuelven un resultado en $\{V, F\}$. En caso del lenguaje $L$, solo $¬$ es unario mientras que el resto son operadores binarios, podría haber funciones de más argumentos, en la cual la tabla de verdad, para $N$ argumentos, requerirá $2^N$ líneas.
+Los conectivos proporcionales son funciones lógicas que tomas argumentos del conjunto $\{V, F\}$ y devuelven un resultado en $\{V, F\}$. En caso del lenguaje $\mathcal{L}$, solo $¬$ es unario mientras que el resto son operadores binarios, podría haber funciones de más argumentos, en la cual la tabla de verdad, para $N$ argumentos, requerirá $2^N$ líneas.
 
 >[!tldr] Conjunto Suficiente de Colectivos
 >Un conjunto de conectivos $S$ será un conjunto suficiente de conectivos, si toda función lógica puede ser expresado en términos de los conectivos del conjunto $S$.
@@ -56,7 +56,7 @@ Para verificar si una sentencia lógicamente válida es ***decidible***, solo ha
 
 ### Deducción en la Lógica Proposicional
 
-La deducción en la lógica proposicional es un poco diferente al anteriormente presentado en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
+La deducción en la lógica proposicional es un poco diferente al presentado en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 
 - **Esquema de Axiomas**:
 	- $A$, $B$ y $C$ son metavariables que representan fórmulas bien formadas en $L$.
