--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
@@ -1,4 +1,4 @@
-Recordemos entonces que un [[1. Calculo Proporsional#^conjunto-suficiente-conectivos|conjunto suficiente de conectivos]] es un conjunto de conectivos que nos permiten construir todas las funciones lógicas existentes. Además, recordemos que la deducción de una teoría formal está definida a partir de *axiomas* y *reglas de inferencia*. Es posible definir diferentes ***aparatos deductivos*** o ***máquinas de inferencia*** a partir de diferentes conjuntos de axiomas y reglas de inferencia, al momento de la definición de estos mecanismos deductivos es importante garantizar la completitud y sensatez[^1] de estos mismos.
+Recordemos entonces que un [[1. Calculo Proposicional#^conjunto-suficiente-conectivos|conjunto suficiente de conectivos]] es un conjunto de conectivos que nos permiten construir todas las funciones lógicas existentes. Además, recordemos que la deducción de una teoría formal está definida a partir de *axiomas* y *reglas de inferencia*. Es posible definir diferentes ***aparatos deductivos*** o ***máquinas de inferencia*** a partir de diferentes conjuntos de axiomas y reglas de inferencia, al momento de la definición de estos mecanismos deductivos es importante garantizar la completitud y sensatez[^1] de estos mismos.
 
 >[!tldr] Máquinas de Inferencia y Equivalencia
 >Dada una semántica $\vDash P$, si poseemos dos máquinas de inferencia $\vdash_1 P$ y $\vdash_2 P$. Si ambas máquinas son sensatas y completas sobre la semántica $\vDash P$, entonces $\vdash_1 P$ y $\vdash_2 P$ son equivalentes.
@@ -7,13 +7,13 @@ Al deducir se procesan símbolos. Por esta razón, es importante encontrar forma
 
 ## Computación para el Cálculo Proposicional
 
-Un ***literal*** en la teoría $L$, definida anteriormente, no es más que una letra proposicional o su negación. Se denomina ***cláusula*** a las disyunciones ($\vee$) de literales, por ejemplo $A \vee ¬B$. $A$ por su sola también es considerada una cláusula. Por otro lado, a las conjunciones de cláusulas se las denomina ***sentencias***, un ejemplo de sentencia serían $(A \vee B \vee ¬ C) \wedge (¬D \vee C)$, $A \wedge ¬A$, entre otras.
-La computación en el cálculo proposicional se basará en la eliminación de ***literales complementarios*** (CLE). Dos literales se dicen complementarios si uno es la negación del otro, por ejemplo $A$ y $¬A$ son complementarios. A modo de facilitar la escritura se introdujeron dos nuevos símbolos:
+Un ***literal*** en la teoría $\mathcal{L}$, definida anteriormente, no es más que una letra proposicional o su negación. Se denomina ***cláusula*** a las disyunciones ($\vee$) de literales, por ejemplo $A \vee ¬B$. $A$ por su sola también es considerada una cláusula. Por otro lado, a las conjunciones de cláusulas se las denomina ***sentencias***, un ejemplo de sentencia serían $(A \vee B \vee ¬ C) \wedge (¬D \vee C)$, $A \wedge ¬A$, entre otras.
+La computación en el cálculo proposicional se basará en la ***eliminación de literales complementarios (CLE)***. Dos literales se dicen complementarios si uno es la negación del otro, por ejemplo $A$ y $¬A$ son complementarios. A modo de facilitar la escritura se introdujeron dos nuevos símbolos:
 
 - $\tau$: Representa todas las fórmulas bien formadas del tipo $¬A \vee A$.
 - $\Box$: Representa todas las fórmulas bien formadas del tipo $¬A \wedge A$.
 
-En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida*** **(FNCR)**.
+En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida (FNCR)***.
 Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos. Una forma normal es un “formato” estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una forma normal conjuntiva reducida.
 Una fórmula bien formada que usa los conectivos $\{ ¬,\wedge ,\vee \}$ está en forma normal conjuntiva si:
 
@@ -59,7 +59,7 @@ Dado un conjunto de cláusulas $S$, una deducción por resolución de la cláusu
 
 >[!tldr] Refutación por Resolución
 >Una deducción por resolución de la cláusula vacía $\Box$ a partir de $S$ se llama refutación por resolución de $S$ o simplemente refutación de $S$.
->Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así entonces la sentencia es una teoría, de lo contrario esto solo sería una sentencia.
+>Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
 
 ### Cláusulas de Horn
 
@@ -82,7 +82,7 @@ La primera y segunda cláusula se dicen definidas, aunque la primera recibe el n
 >Supongamos que queremos probar que $Q$ se deduce de un conjunto $P$. Si de un conjunto $P$ se prueba $Q$, entonces $P \cup \{¬Q\}$ tiene que ser inconsistente, por lo tanto, debe existir una refutación de $P \cup \{¬Q\}$.
 >Veamos esto con un ejemplo, si queremos probar que $A$ se deduce de $P = \{¬B \vee A, B\}$, entonces negamos la consulta quedándonos $¬A$ y $P \cup \{¬A\}$ lo que nos ayudará en la refutación. Si querríamos expresar esto en una cláusula de Horn nos quedaría $\leftarrow Q$. 
 
-## Completitud del Cálculo Proposicional
+## Completitud y Computabilidad del Cálculo Proposicional
 
 Hemos descrito el método de resolución proposicional, que permite generar refutaciones de un conjunto de cláusulas. Al refutar dichas cláusulas, demostramos que su conjunción es contradictoria, es decir, imposible de satisfacer.
 El concepto de resolvente fija se refiere a una cláusula $C$, que actúa como la resolvente de un par de cláusulas de un conjunto $S$. Si $C$ es una resolvente fija de un par de cláusulas de $S$, denotado como $S \longrightarrow C$. Usaremos la notación $S \stackrel{*}{\longrightarrow} C$ cuando exista una deducción por resolución de $C$ a partir de $S$. Asimismo, $S \stackrel{*}{\longrightarrow} \square$ indica que existe una deducción por resolución de la contradicción, es decir de la refutación de $C$ a partir de $S$.
@@ -93,25 +93,24 @@ Como mostramos en el ejemplo anterior, si bien a partir de un conjunto de cláus
 
 Dado un conjunto $S$ de cláusulas, definimos $\Re(S)$ como la unión de $S$ con el conjunto de todas las resolventes fijas de la cláusula $S$, formalmente denotado:
 
-$$\Re(S) = S \cup \{C : C \text{es una resolvente de } C_1 \text{ y } C_2 \ / \ C_1, C_2 \in S\}$$
-Definimos entonces a la aplicación de $\Re$ de la siguiente manera $\Re^0(S) = S$ siendo $\Re^{n + 1}(S) = \Re(\Re^n(S))$.
-Notamos que para cualquier $S$ se cumple lo siguiente:
+$$\Re(S) = S \cup \{C : C \ \text{es una resolvente de } C_1 \text{ y } C_2 \ / \ C_1, C_2 \in S\}$$
+Definimos entonces a la aplicación de $\Re$ de la siguiente manera $\Re^0(S) = S$ siendo $\Re^{n + 1}(S) = \Re(\Re^n(S))$ el resultado de aplicar este procedimiento múltiples veces. Notamos que para cualquier $S$ se cumple lo siguiente:
 
 $$S = \Re^0(S) \subseteq \Re^1(S) \subseteq \Re^2(S) \subseteq \dots \subseteq \Re^n(S)$$
 
 Es decir, la aplicación sucesiva del operador $\Re$ produce una secuencia creciente, en el sentido de la inclusión de conjuntos. La razón es que si $X$ es un conjunto cualquiera de sentencias, el conjunto $\Re(X)$ es el resultado de agregar a $X$ las resolventes que se calcularon a partir de las cláusulas que contiene el conjunto inicial.
-Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite. Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada de aplicar el operador $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
+Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite. Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada por $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
 
 ## Resultados Meta-Teóricos
 
 A continuación pasaremos a describir una serie de lemas y teoremas que nos ayudaran a probar que el cálculo proposicional es completo y sensato[^2]. Además de una serie de definiciones.
 
 1. Si $P$ es un axioma, entonces $P$ es una tautología.
-2. Si $\vdash P$ entonces $\vDash P$. Este teorema asegura la sensatez de la teoría $L$ presentada con anterioridad.
+2. Si $\vdash P$ entonces $\vDash P$. Este teorema asegura la sensatez de la teoría $\mathcal{L}$ presentada con anterioridad.
 3. Si $S$ es un conjunto ***insatisfacible*** de cláusulas fijas, tal que $A \in S$ y $B \subseteq A$, entonces $S$ con $A$ reemplazado con $B$ es un conjunto insatisfacible.
 
 >[!tldr] Insatisfacibilidad de un Conjunto
->Observemos que el lema anterior asegura que si un conjunto de cláusulas es insatisfacible, no se puede hacer satisfacible eliminando literales de una cláusula, al eliminar estos literales la cláusula se vuelve más difícil de satisfacer. En cambio, si se elimina una cláusula por completo la situación cambia. Por ejemplo dado el conjunto $S = \{\{¬R\},\{R\}\}$ si eliminamos $\{¬R\}$ del mismo, claramente el conjunto pasa a ser satisfacible.
+>Observemos que el lema anterior asegura que si un conjunto de cláusulas es insatisfacible, no se puede hacer satisfacible eliminando literales de una cláusula, al contrario, cuando se eliminan literales la cláusula se vuelve más difícil de satisfacer. En cambio, si se elimina una cláusula por completo la situación cambia. Por ejemplo dado el conjunto $S = \{\{¬R\},\{R\}\}$ si eliminamos $\{¬R\}$ del mismo, claramente el conjunto pasa a ser satisfacible.
 
 4. Si $S$ es un conjunto de cláusulas fijas ***insatisfacibles minimal*** entonces $S \stackrel{*}{\longrightarrow} \square$.
 
