[Refactor] add titles in unit 3.1 logic

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -1,6 +1,11 @@
 El cálculo de predicados es la intersección de un conjunto de teorías de primer orden que engloba a su vez al cálculo proposicional. Esto quiere decir que todo lo definido hasta el momento para el cálculo proposicional es aplicable también el cálculo de predicados.
+
+#### Limitaciones del Cálculo Proposicional
 El cálculo proposicional presenta algunas falencias desde el punto de vista de su capacidad de representación. En especial cuando se intenta representar propiedades de individuos, ya que no es posible realizar tal acción de manera natural. Esta habilidad es provista en el cálculo de predicados.
+
+#### Predicados y cuantificadores
 La palabra ***predicado*** tiene varios significados, entre ellos se considera a un predicado como *la afirmación de una cualidad, atributo, propiedad de un individuo* o también como *la parte de una sentencia que expresa lo que se dice del sujeto*. Por ejemplo, en la oración "*Pedro es alto*" se dice que el individuo Pedro (sujeto) tiene el atributo o propiedad de ser alto (predicado).
+
 En el cálculo proposicional ($L$) podemos representar dicha afirmación como $A_1$, pero esto no refleja la semántica que se intenta tener de las sentencias representadas. El cálculo de predicados permite mantener la conexión entre la representación y lo que se quiere representar, por ejemplo, para representar la altura de Pedro y Juan se lo puede hacer de la siguiente manera `alto(pedro)`, `alto(juan)`. Esta expresividad le permite al cálculo de predicados expresar relaciones que existen entre los sujetos de una relación y sentencias mucho más complejas, ya que se introducen ***cuantificadores*** que permiten referirse a individuos de forma general, estos operadores son:
 
 1. El cuantificador $\forall$, es el cuantificador universal y permite hacer referencia a todos los individuos de un dominio en particular. Por ejemplo $(\forall x) (perro(x) \rightarrow mamifero(x))$.
@@ -10,12 +15,12 @@ En el cálculo proposicional ($L$) podemos representar dicha afirmación como $A
 
 El lenguaje $P$ definido para el cálculo de predicados consta de los siguientes elementos:
 
-1. Conjunto contable no vacío de letras predicativas $p_k^n$ para todo $k$ y $n$ natural.
-2. Conjunto contable y posiblemente vacío de letras funcionales $f_k^n$ para todo $k$ y $n$ natural.
-3. Conjunto numerable de variables $x, y, z, x_1, x_2, \cdots$, generalmente se utilizan las últimas letras del abecedario para denotar a las variables.
-4. Conjunto numerable y posiblemente vacío de constantes $a, b, c, a_1, a_2, \cdots$, generalmente se utiliza las primeras letras del abecedario para denotar a las constantes.
-5. Conectivos lógicos $\{¬; \rightarrow; \forall\}$, el resto de conectivos y operadores se pueden construir a partir de esos tres conectivos, aunque por cuestiones de practicidad se pueden utilizar las reglas de reescritura presentadas con anterioridad.
-6. Símbolos auxiliares $\{);(; ,\}$.
+1. **Letras Predicativas:** Conjunto contable no vacío de letras predicativas $p_k^n$ para todo $k$ y $n$ natural.
+2. **Letras Funcionales:** Conjunto contable y posiblemente vacío de letras funcionales $f_k^n$ para todo $k$ y $n$ natural.
+3. **Variables:** Conjunto numerable de variables $x, y, z, x_1, x_2, \cdots$, generalmente se utilizan las últimas letras del abecedario para denotar a las variables.
+4. **Constantes:** Conjunto numerable y posiblemente vacío de constantes $a, b, c, a_1, a_2, \cdots$, generalmente se utiliza las primeras letras del abecedario para denotar a las constantes.
+5. **Conectivos lógicos:** $\{¬; \rightarrow; \forall\}$, el resto de conectivos y operadores se pueden construir a partir de esos tres conectivos, aunque por cuestiones de practicidad se pueden utilizar las reglas de reescritura presentadas con anterioridad.
+6. **Símbolos auxiliares:** $\{);(; ,\}$.
 
 Tanto para las letras funcionales como para las letras predicativas $k$ representa el nombre y $n$ su aridad, por lo tanto, dos letras funcionales o letras predicativas son iguales si poseen el mismo nombre y aridad. Si bien formalmente se utilizan números enteros para $k$ y $n$ cuando se define cada construcción del lenguaje intentaremos utilizar letras sin índices para evitar confusiones.
 
