[Refactor] add explains in axioms in unit 3.2 logic

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
@@ -1,11 +1,11 @@
 Hasta ahora hemos estudiado la sintaxis y la semántica del cálculo de predicados, pero aún falta abordar una de las partes más importantes de esta teoría, la máquina de inferencia, que es utilizada para demostrar la veracidad de un teorema en $\mathcal{P}$.
 Los axiomas del cálculo de predicados son los siguientes:
 
-1. $PC_1: (A \rightarrow (B \rightarrow A))$.
-2. $PC_2: ((A \rightarrow (B \rightarrow C)) \rightarrow ((A \rightarrow B) \rightarrow (A \rightarrow C)))$.
-3. $PC_3: (((¬B) \rightarrow (¬A)) \rightarrow (((¬B) \rightarrow A) \rightarrow B))$.
-4. $PC_4: (\forall x)A(x) \rightarrow A(t)$ donde $t$ es término libre para $x$ en $A$.
-5. $PC_5:(\forall x)( A \rightarrow B)\rightarrow(A \rightarrow (\forall x)B)$ si $A$ no contiene ninguna aparición libre de $x$.
+1. $PC_1: (A \rightarrow (B \rightarrow A))$. Esto significa que si $A$ es verdadera, entonces $B→A$ también es verdadera, independientemente del valor de $B$.
+2. $PC_2: ((A \rightarrow (B \rightarrow C)) \rightarrow ((A \rightarrow B) \rightarrow (A \rightarrow C)))$. Este axioma permite reorganizar implicaciones y es esencial para construir pruebas lógicas más complejas.
+3. $PC_3: (((¬B) \rightarrow (¬A)) \rightarrow (((¬B) \rightarrow A) \rightarrow B))$. Relaciona negaciones e implicaciones, permitiéndonos inferir $B$ bajo ciertas condiciones.
+4. $PC_4: (\forall x)A(x) \rightarrow A(t)$ donde $t$ es término libre para $x$ en $A$. Si algo es cierto para **todos** los $x$, entonces es cierto para un **caso especifico** $t$, siempre que $t$ no cause conflictos en la formula al sustituir.
+5. $PC_5:(\forall x)( A \rightarrow B)\rightarrow(A \rightarrow (\forall x)B)$ si $A$ no contiene ninguna aparición libre de $x$. Si $A$ implica $B$ para **todos** los $x$, y $A$ no depende de $x$, entonces $A$ implica que $B$ es cierto para todos los $x$.
 
 ## Variables Libres y Ligadas
 
